--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,16 @@
                 "input": "public"
               }
             ],
-      "styles": [
+"styles": [
   "node_modules/bootstrap/scss/bootstrap.scss",
   "node_modules/bootstrap-icons/font/bootstrap-icons.css",
-  "src/styles.css"
+  "src/styles.css",
+  "node_modules/sweetalert2/dist/sweetalert2.min.css",
+  "node_modules/@angular/material/prebuilt-themes/purple-green.css"
 ],
 "scripts": [
-  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+  "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+  "node_modules/sweetalert2/dist/sweetalert2.min.js"
 ]
           },
           "configurations": {
