--- a/angular.json
+++ b/angular.json
@@ -46,12 +46,12 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
+             "budgets": [
+  {
+    "type": "initial",
+    "maximumWarning": "1mb",
+    "maximumError": "2.05mb"
+  },
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "2kB",
